# mpd-hotplug

./: Makefile.in  configure  configure.ac  configure.in  mpd-hotplug.c
src/: Makefile.am  Makefile.in  libmpdclient.c  libmpdclient.h  mpdhotplug.c
templates/: mpd.config
